--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,7 @@ body {
 		twinkleStars var(--twinkle-duration) ease-in-out infinite;
 	position: relative;
 	overflow: hidden;
+	padding-bottom: 2em;
 }
 
 /* Cosmic background animation */
