--- a/src/index.css
+++ b/src/index.css
@@ -360,6 +360,7 @@ p.artist:hover {
 
 .footer {
 	text-align: center;
+	margin: 1rem auto;
 	color: var(--secondary-text);
 	font-size: 0.9rem;
 	margin-top: 1rem;
